depends_compile_tests/tests/fail/derive/graph/unknown_edge.stderr
error: Unknown node.
  --> tests/fail/derive/graph/unknown_edge.rs:15:9
   |
15 |         likes -> comments_posts [label="TrackLikeFriendIds"];
   |         ^^^^^
